syntax = "proto3";

// import "google/protobuf/struct.proto";
// import "grpc/status/status.proto";

option go_package = ".;testpb";

message Test {
	double field_double = 1;
	float field_float = 2;
	int32 field_int32 = 3;
	int64 field_int64 = 4;
	uint32 field_uint32 = 5;
	uint64 field_uint64 = 6;
	sint32 field_sint32 = 7;
	sint64 field_sint64 = 8;
	fixed32 field_fixed32 = 9;
	fixed64 field_fixed64 = 10;
	sfixed32 field_sfixed32 = 11;
	sfixed64 field_sfixed64 = 12;
	bool field_bool = 13;
	string field_string = 14;
	bytes field_bytes = 15;
}